--- a/MedicalApp.Appointments.Api/MedicalApp.Appointments.Api.csproj
+++ b/MedicalApp.Appointments.Api/MedicalApp.Appointments.Api.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Include="C:\Users\aceve\Desktop\Proyecto\MedicalAppointment\AppointmentController.cs" Link="AppointmentController.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
