--- a/MedicalApp.System.Api/appsettings.json
+++ b/MedicalApp.System.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MedicalDB": "Server=RANDY-PC-L\\SQLEXPRESS;Database=MedicalAppointment;User ID=randydb; Password=122507;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
