--- a/MedicalAppointment.Medical.Api/appsettings.json
+++ b/MedicalAppointment.Medical.Api/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MedicalAppDB": "Server=DESKTOP-SMUVD6K\\SQLEXPRESS;Database=MedicalAppointment;User ID=budav;Password=Benuli-251004;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }
 }
