Terminando el esquema de system en la capa de aplicacion, el de appointment está casi completo entre otras modificaciones

--- a/MedicalAppointment.Application/MedicalAppointment.Application.csproj
+++ b/MedicalAppointment.Application/MedicalAppointment.Application.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\Configuration\Roles\" />
-    <Folder Include="Response\Configuration\Roles\" />
+    <Folder Include="Dtos\appointments\Appointments\" />
+    <Folder Include="Response\appointments\Appointments\" />
   </ItemGroup>
 
   <ItemGroup>
