--- a/MedicalApp.Insurance.Api/appsettings.json
+++ b/MedicalApp.Insurance.Api/appsettings.json
@@ -5,8 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "insuranceDB": "Server=JEPHERSON;Database=MedicalAppointment;User ID =deleon; Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
+  
 }
