Integrando la logica de con el API

--- a/MedicalApp.System.Api/MedicalAppointment.System.Api.csproj
+++ b/MedicalApp.System.Api/MedicalAppointment.System.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppointment.Persistance\MedicalAppointment.Persistance.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.IOC\MedicalAppointment.IOC.csproj" />
   </ItemGroup>
 
 </Project>
