--- a/MedicalApp.Appointments.Api/MedicalAppointment.Appointments.Api.csproj
+++ b/MedicalApp.Appointments.Api/MedicalAppointment.Appointments.Api.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppointment.Persistance\MedicalAppointment.Persistance.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.IOC\MedicalAppointment.IOC.csproj" />
   </ItemGroup>
 
 </Project>
