--- a/MedicalApp.Appointments.Api/appsettings.json
+++ b/MedicalApp.Appointments.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MedicalDB": "Server=RANDY-PC-L\\SQLEXPRESS;Database=MedicalAppointment;User ID=randydb; Password=122507;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "MedicalDB": "Server=DESKTOP-SMUVD6K\\SQLEXPRESS;Database=MedicalAppointment;User ID=budav; Password=Benuli-251004;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
 
 }
