Refactorizando el consumo al Api desde la Web.

--- a/MedicalAppointment.Web/MedicalAppointment.Web.csproj
+++ b/MedicalAppointment.Web/MedicalAppointment.Web.csproj
@@ -11,7 +11,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MedicalAppointment.Application\MedicalAppointment.Application.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.Consumption\MedicalAppointment.Consumption.csproj" />
+    <ProjectReference Include="..\MedicalAppointment.IOC\MedicalAppointment.IOC.csproj" />
   </ItemGroup>
 
 </Project>
