--- a/MedicalAppointment.Web/appsettings.json
+++ b/MedicalAppointment.Web/appsettings.json
@@ -8,5 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "MedicalDB": "Server=RANDY-PC-L\\SQLEXPRESS;Database=MedicalAppointment;User ID=randydb; Password=122507;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  },
+  "ApiConfig": {
+    "UrlBase": "http://localhost:5110/api/"
   }
 }
