De poco un todo

--- a/MedicalApp.Insurance.Api/appsettings.json
+++ b/MedicalApp.Insurance.Api/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "insuranceDB": "Server=JEPHERSON;Database=MedicalAppointment;User ID =deleon; Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "MedicalDB": "Server=DESKTOP-SMUVD6K\\SQLEXPRESS;Database=MedicalAppointment;User ID=budav; Password=Benuli-251004;TrustServerCertificate=True;MultipleActiveResultSets=true"
   }
   
 }
