--- a/MedicalAppointment.Web/appsettings.json
+++ b/MedicalAppointment.Web/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MedicalDB": "Server=RANDY-PC-L\\SQLEXPRESS;Database=MedicalAppointment;User ID=randydb; Password=122507;TrustServerCertificate=True;MultipleActiveResultSets=true"
+    "MedicalDB": "Server=DESKTOP-SMUVD6K\\SQLEXPRESS;Database=MedicalAppointment;User ID=budav; Password=Benuli-251004;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "ApiConfig": {
-    "UrlBase": "http://localhost:5110/api/"
+    "UrlBase": "http://localhost:5028/api/"
   }
 }
