Repositorio refactorizado entre otras cosas.

--- a/MedicalApp.Insurance.Api/appsettings.json
+++ b/MedicalApp.Insurance.Api/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "insuranceDB": "Server=JEPHERSON;Database=MedicalAppointment;User ID =deleon; Password=123456;TrustServerCertificate=True;MultipleActiveResultSets=true"
-  }
-  
+    "MedicalDB": "Server=RANDY-PC-L\\SQLEXPRESS;Database=MedicalAppointment;User ID=randydb; Password=122507;TrustServerCertificate=True;MultipleActiveResultSets=true"
+  }  
 }
